# smartinstantindex

./: .gitignore  CLAUDE.md  README.md  app.py  app_web.py  build.py  config.example.json  index.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
smartinstantindex/: indexing.py  searchconsole.py  sitemaps.py  utils.py
web-local/backend/: routes.py
web-local/frontend/: package-lock.json
web-local/frontend/src/components/: Dashboard.tsx  Settings.tsx
web-local/frontend/src/lib/: api.ts
web-local/frontend/src/pages/: index.astro
web-local/frontend/src/styles/: global.css
web_local/backend/: routes.py
web_local/frontend/: astro.config.mjs  package.json
web_local/frontend/public/: site.webmanifest
web_local/frontend/src/components/: App.tsx  Help.tsx  Sidebar.tsx  SiteDetail.tsx  SiteForm.tsx  SitesList.tsx  UrlsTable.tsx
web_local/frontend/src/lib/: api.ts
